--- a/turan.tex
+++ b/turan.tex
@@ -150,8 +150,8 @@ The following lemma helps us use divide-and-conquer to prove upper bounds:
 \[
    \ex(n,X)\in 
       \begin{cases} 
-          O(n^c) & \text{if $c>1$} \\
-            O(n\log n)$ & \text{if $c=1$}
+          O(n^c)     & \text{if $c>1$} \\
+          O(n\log n) & \text{if $c=1$}
       \end{cases}
 \]
 \end{lem}
