Spelling of Turán

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Some notes on Turan type theorems for triangles in a convex point set
+Some notes on Turán type theorems for triangles in a convex point set
