--- a/turan.tex
+++ b/turan.tex
@@ -10,6 +10,11 @@
 citecolor=linkblue, filecolor=linkblue, menucolor=linkblue, pagecolor=linkblue,
 urlcolor=linkblue, pdfcreator=Me, pdfproducer=Me} \setlength{\parskip}{1ex}
 
+
+% To reduce space in lists
+\usepackage{enumitem}  
+\setlist{noitemsep}
+
 %\usepackage[skip=0pt]{caption}
 
 \title{\MakeUppercase{More Turán-Type Theorems for Triangles in Convex Point Sets}\thanks{This research is partially funded by NSERC.}}
@@ -94,8 +99,9 @@ number of triangles in a triangulation of a convex $n$-gon, i.e., $n-2$.
   \hline
   $\ex(n,\{\disjointa,\disjointb,\vertexa,\vertexb\}) = n$ & \cite{brass.rote.ea:triangles} \\
   \hline
-  $\ex(n,\{\edgea,\vertexb\}) \in \Omega(n^{3/2})\cap O(n^2)$ & here \\
-  $\ex(n,\{\edgea,\vertexb,\vertexc\}) \in \Theta(n)$ & \thmref{blech} \\
+  $\ex(n,\{\edgea,\vertexb\}) \in \Omega(n^{3/2})$ & here \\
+  $\ex(n,\{\edgea,\vertexb,\vertexa\}) \in \Omega(n^{3/2})$ & here \\
+  $\ex(n,\{\edgea,\vertexb,\vertexc\}) \in \Omega(n) \cap O(n\log n)$ & \thmref{blech} \\
   $\ex(n,X\cup\{\edgeb\})\in \Theta(\ex(n,X))$ & \lemref{xcup} \\
   \end{tabular}
 \end{center}
@@ -105,6 +111,8 @@ number of triangles in a triangulation of a convex $n$-gon, i.e., $n-2$.
 
 \section{Some Easy Results}
 
+
+\subsection{Edge-Sharing Non-Overlapping Triangles are Irrelevant}
 
 The following lemma shows that including the $\edgea$ confguration in
 the set $X$ of forbidden configurations has no effect on the asymptotics
@@ -136,14 +144,28 @@ forbidden configurations when proving upper bounds.  By \lemref{xcup}
 any upper bound we prove this way holds (within a factor of 8) without
 including \edgeb.
 
-It will be helpful to consider an top/bottom variant of $\ex(n,X)$ that
-is defined as follows.  Partition the vertices of a convex $n$-gon using a
-horizontal line into a \emph{top half} of size $\lfloor n/2\rfloor$ and
-a \emph{bottom half} of size $\lceil n/2\rceil$.  We define $\ex'(n,X)$
-analogously to $\ex(n,X)$ except that we only count triangles have one
-vertex in the bottom half and one vertex in the top half.
+\subsection{The Top/Bottom View}
 
-The following lemma helps us use divide-and-conquer to prove upper bounds:
+It will be helpful to consider an top/bottom variant of $\ex(n,X)$
+that is defined as follows (see \figref{top-bottom}).  Partition the
+vertices of a convex $n$-gon using a horizontal line into a \emph{top
+half} of size $\lfloor n/2\rfloor$ and a \emph{bottom half} of size
+$\lceil n/2\rceil$.  We define $\ex'(n,X)$ analogously to $\ex(n,X)$
+except that we only count triangles have one vertex in the bottom half
+and one vertex in the top half.  When studying $\ex'$, each triangle
+has a naturally defined \emph{bottom vertex} in the bottom half and a
+\emph{left vertex} and \emph{right vertex}, each in the top half.
+
+\begin{figure}
+  \begin{center}
+    \includegraphics{figs/left-right}
+  \end{center}
+  \caption{$\ex'$ only counts triangles with two vertices in the top half
+     and one vertex in the bottom half.}
+  \figlabel{top-bottom}
+\end{figure}
+
+The following lemma shows that we can, without losing much, study $\ex'(n,X)$ instead of $\ex(n,X)$.
 
 \begin{lem}\lemlabel{top-bottom}
   If $\ex'(n,X)\in O(n^c)$, then
@@ -156,6 +178,75 @@ The following lemma helps us use divide-and-conquer to prove upper bounds:
 \]
 \end{lem}
 
+\begin{proof}
+   Let $S$ be a set of triangles that avoids $X$.  
+   Every triangle in $S$
+   is of one of the following types:
+   \begin{enumerate}
+      \item It has one vertex in the top half and two in the bottom half; there are $O(n^{c})$ such triangles.
+      \item It has two vertices in the top half and one in the bottom half; there are $O(n^{c})$ such triangles.
+      \item It has all three vertices in the top half; there are at most $\ex(\lfloor n/2\rfloor,X)$ such triangles.
+      \item It has all three vertices in the bottom half; there are at most $\ex(\lceil n/2\rceil,X)$ such triangles.
+   \end{enumerate}
+   Thus, we obtain the recurrence inequality:
+   \[  \ex(n,X) = O(n^{c}) + \ex(\lfloor n/2\rfloor,X) + \ex(\lceil n/2\rceil,X) \]
+   which resolves to $O(n^c)$ for $c>1$ and $O(n\log n)$ for $c=1$.
+\end{proof}
+
+
+\subsection{The Dot Puzzle View}
+
+It is sometimes helpful to take the top/bottom view of the problem
+and turn it, instead, into a puzzle.  Refer to \figref{point-view}.
+In this puzzle, we are given $\binom{n}{2}$ points,
+\[
+    Q = \{(x,y): y\in\{1,\ldots,n-1\}, x\in\{y+1,\ldots,n-1\} \} \enspace .
+\]
+These points model the top/bottom view on a set of size $2n$, where the
+point $(x,y)$ represents a triangle whose vertices are some point on
+the bottom and the $x$th and $y$th points on the top, where the top
+vertices are labelled $1,\ldots,n$ from left to right.
+
+\begin{figure}
+   \begin{center}
+      \includegraphics{figs/point-view}
+   \end{center}
+   \caption{The Dot Puzzle View of the Top/Bottom View. Orange points were
+     selected in round 1, green points in round 2 and pink points in round 3.}
+   \figlabel{point-view}
+\end{figure}
+
+The puzzle proceeds in $n$ rounds and during the $i$th round, the player
+selects a set $Q_i\subseteq Q$ subject to certain constraints that depend
+on the points selected in rounds $1,\ldots,i-1$.  In the top/bottom view,
+the $i$th round determines which pairs of top vertices form a triangle
+with the $i$th bottom vertex, where the bottom vertices are labelled
+$1,\ldots,n$ from right to left.
+
+Of course, the constraints imposed on the play of the game depend
+on the set of forbidden configurations.  For example, the $\vertexb$
+configuration adds two restrictions:
+\begin{itemize}
+   \item During a single round, we cannot select $(x_1,y_1)$ and
+      $(x_2,y_2)$ with $y_1<y_2$ and $x_1>x_2$ since this would create
+      a $\vertexb$ configuration at the bottom vertex.
+
+   \item If $(x_1,y_1)$ is selected in some round, then we cannot,
+      in a later round, select $(x_1,y_2)$ with $y_2<y_1$ nor can
+      we select $(x_2,y_1)$ with $x_2<x_1$.  Doing so would create
+      a $\vertexb$ configuration at the top vertex labelled $x_1$
+      (respectively, at the top vertex labelled $y_1$).
+\end{itemize}
+For example, in \figref{point-view} the green triangle joining top
+vertices 2 and 7 and the pink triangle joining top vertices 2 and 3
+violate the second condition and these two triangles form $\vertexb$
+configuration at top vertex 2.
+
+
+\section{Some Bounds}
+
+Now, with our tools in hand, we are ready to study some problems.
+
 \begin{thm}\thmlabel{blech}
   $\ex(n,\{\edgea,\vertexb,\vertexc\}) \in \Omega(n)\cap O(n\log n)$.
 \end{thm}
@@ -167,13 +258,34 @@ The following lemma helps us use divide-and-conquer to prove upper bounds:
   To prove the $O(n\log n)$ upper bound, it suffices---by
   Lemmas~\ref{lem:xcup} and \ref{lem:top-bottom}---to show that
   $\ex'(n,\{\edgea,\vertexb,\vertexc,\edgeb\})\in O(n)$.
+
+  We claim that each
+  vertex in the top half is the left vertex of at most one triangle
+  and is the right vertex of at most one triangle.  Therefore,
+  each vertex of the top half is used in at most two triangles, so
+  $\ex'(n,\{\edgea,\vertexb,\vertexc,\edgeb\}) \in O(n)$.
+
+  Refer to \figref{triple-fig}.
+  To see why each vertex in the top half is the left vertex of at most
+  one triangle, observe that, since $\edgea$ and $\edgeb$ are forbidden
+  configurations, the only other possibilties for two triangles to share
+  a left vertex result in a $\vertexb$ or $\vertexc$ configuration.
+  The argument for why each vertex is the right vertex of at most one
+  triangle is symmetric.
+  \begin{figure}
+    \begin{center}
+       \begin{tabular}{c@{\hspace{2em}}c}
+          \includegraphics{figs/triple-fig-1} &
+          \includegraphics{figs/triple-fig-2} 
+       \end{tabular}
+    \end{center}
+    \caption{Using a vertex as the left vertex of two triangles creates a 
+      forbidden configuration}
+  \end{figure}
+  \figlabel{triple-fig}
 \end{proof}
 
-
-
-
-
-\bibliographystyle{plainurl}
+\bibliographystyle{plain}
 \bibliography{turan}
 
 \end{document}
